<resources>
    <string name="app_name">FiestApp</string>
    <string name="btnPrincipal_Index">ENCONTRAR</string>
    <string name="btnLogin_Index">INICIAR SESIÓN</string>
    <string name="btnReg_Index">REGISTRARSE</string>
    <string name="next">Continuar</string>
    <string name="txtUsu_Login">Correo electrónico</string>
    <string name="txtPas_Login">Contraseña</string>
    <string name="btnLog_Login">Iniciar Sesión</string>
    <string name="lblRecu_Login">Olvidé mi contraseña</string>
    <string name="btnRecu_Login">CLICK AQUI</string>
    <string name="lblReg_Login">¿No tienes una cuenta?</string>
    <string name="lblReg_TipoTit">¿Quieres publicar tus propios eventos?</string>
    <string name="lblReg_TipoAva">Si</string>
    <string name="lblReg_TipoNor">No</string>
    <string name="lblReg_InfoTit">Cuentanos un poco mas de ti</string>
    <string name="lblReg_Info1">FECHA DE NACIMIENTO</string>
    <string name="lblReg_Info2">GENERO</string>
    <string name="lblReg_Info21">No Binario</string>
    <string name="lblReg_Info22">Mujer</string>
    <string name="lblReg_Info23">Hombre</string>
    <string name="lblReg_NomTit">¿Como te llamas?</string>
    <string name="lblReg_Nom1">Nombre</string>
    <string name="lblReg_Nom2">Apellidos</string>
    <string name="lblReg_UsuTit">Informacion necesaria para el inicio de sesion</string>
    <string name="lblReg_Usu1">Repetir Contraseña</string>

</resources>
