<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="260dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView3"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:hint="@string/txtUsu_Login"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:hint="@string/txtPas_Login"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText2"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:text="@string/btnLog_Login" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button"
        android:layout_marginBottom="-73dp"
        android:layout_toEndOf="@id/textView2"
        android:text="@string/btnRecu_Login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-58dp"
        android:text="@string/lblRecu_Login" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#585858" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lblReg_Login"
        android:textColor="#BBBBBB"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-3dp"
        android:layout_toEndOf="@id/textView3"
        android:text="@string/btnReg_Index"
        android:textColor="#FFFFFF" />

</RelativeLayout>