<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regInfo">

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-200dp"
        android:onClick="registra_3"
        android:text="@string/next" />

    <Button
        android:id="@+id/btnBack4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="atras" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-70dp"
        android:fontFamily="@font/exo_2_medium"
        android:text="@string/lblReg_InfoTit"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-40dp"
        android:text="@string/lblReg_Info1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:text="@string/lblReg_Info2"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:inputType="date" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-120dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/lblReg_Info21"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/lblReg_Info22"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/lblReg_Info23"
            android:textSize="18sp" />
    </RadioGroup>
</RelativeLayout>