<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regUsu">

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText8"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/next" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView8"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-80dp"
        android:ems="10"
        android:hint="@string/txtUsu_Login"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText4"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:hint="@string/txtPas_Login"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText7"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:hint="@string/lblReg_Usu1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnBack5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="atras" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-70dp"
        android:fontFamily="@font/exo_2_medium"
        android:text="@string/lblReg_UsuTit"
        android:textAlignment="center"
        android:textSize="30sp" />
</RelativeLayout>