<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regNom">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-70dp"
        android:fontFamily="@font/exo_2_medium"
        android:text="@string/lblReg_NomTit"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnBack3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="atras" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-80dp"
        android:ems="10"
        android:hint="@string/lblReg_Nom1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:hint="@string/lblReg_Nom2"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-80dp"
        android:onClick="registra_4"
        android:text="@string/next" />
</RelativeLayout>