<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regTipo">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo2" />

    <Button
        android:id="@+id/btnBack2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="atras" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-70dp"
        android:fontFamily="@font/exo_2_medium"
        android:text="@string/lblReg_TipoTit"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-80dp"
        android:background="@color/color1"
        android:onClick="registra_2"
        android:text="@string/lblReg_TipoNor"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-60dp"
        android:onClick="registra_2"
        android:text="@string/lblReg_TipoAva"
        android:textSize="18sp" />
</RelativeLayout>